--- a/mapElement.html
+++ b/mapElement.html
@@ -1,25 +1,30 @@
 <div id="map" style="height: 500px; "></div>
-<script>
+  <script>
+      // An object containing the position and radius of our nodes
       var nodeMap = {
         blitzerman: {
-          center: {lat: 63.4217156, lng: 10.1269178},
+          center: {lat: 63.4217, lng: 10.1269},
           diameter: 100
         },
         gazerbeam: {
-          center: {lat: 63.4223372, lng: 10.1288383},
+          center: {lat: 63.4223, lng: 10.1288},
           diameter: 100
         },
         stormicide: {
-          center: {lat: 63.4217156, lng: 10.1269178},
+          center: {lat: 63.4231, lng: 10.1240},
           diameter: 100
         }
       };
-      var map;
+
+      
       function initMap() {
-        map = new google.maps.Map(document.getElementById('map'), {
+        // Create the map
+        var map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 63.4217156, lng: 10.1269178},
           zoom: 14
         });
+
+        // Construct the circles
         for (var node in nodeMap) {
           var nodeCircle = new google.maps.Circle({
             strokeColor: '#FF0000',
@@ -33,5 +38,7 @@
           });
         }
       }
-    </script>
+      // The following script contains an unrestricted API key connected to my PERSONAL google cloud console profile. It will charge me economically if overused. Therefore: Do NOT spread it around - Andreas
+  </script>
 <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMNbqaqaKi9GeJwywQmprU-sLipKDxbTU&callback=initMap" async defer></script>
+
