--- a/mapElement.html
+++ b/mapElement.html
@@ -21,7 +21,8 @@
         // Create the map
         var map = new google.maps.Map(document.getElementById('map'), {
           center: {lat: 63.42092, lng: 10.12167},
-          zoom: 17
+          zoom: 16,
+          mapTypeId: 'satellite'
         });
 
         // Construct the circles
