--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@ https://www.tooplate.com/view/2117-infinite-loop
               </li>
               <li class="nav-item">
                   
-               <a class="nav-link tm-nav-link" href="#whatwedo">Hva vi gjør</a>
+               <a class="nav-link tm-nav-link" href="#whatwedo">Hva gjør vi</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link tm-nav-link" href="#testimonials">Om oss</a>
@@ -134,7 +134,7 @@ https://www.tooplate.com/view/2117-infinite-loop
             <div class="row tm-content-box"><!-- first row -->
                 <div class="col-lg-12 col-xl-12">
                     <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4 tm-section-title">Hva vi gjør</h2>
+                        <h2 class="tm-text-primary mb-4 tm-section-title">Hva gjør vi</h2>
                         <p class="mb-4 tm-intro-text">
                           Vi er en gruppe studenter som går andre året på ELSYS, vi har fått i oppgave av Trønder Energi å lage en løsning for overvåkning av fugleaktiviteten i området rundt en vindmølle. Løsningen skal implemnteres ved bruk av radar, der vi ønsker å bruker flere noder for å dekke et tilstreklig stort område.</p>
                     </div>
