--- a/index.html
+++ b/index.html
@@ -147,9 +147,9 @@
                 </div>
                 <div class="col-lg-5">
                     <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4">Statestikk</h2>
+                        <h2 class="tm-text-primary mb-4">Statistikk</h2>
                         <p class="mb-4 tm-intro-text">
-                          Vi lever detaljert statestikk over fugleaktiviteten i området, merket med tidspunkt og lengde på aktivitet.</p>
+                          Vi lever detaljert statistikk over fugleaktiviteten i området, merket med tidspunkt og lengde på aktivitet.</p>
                     </div>
                 </div>
                 
