--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@ https://www.tooplate.com/view/2117-infinite-loop
             <h2 class="tm-text-primary mb-4 tm-section-title">Data</h2>
             <h3>Node 1</h3>
             <p class="mb-4 tm-intro-text">
-              <pre id="tid"></pre>
+              <pre id="timestamp1"></pre>
               <pre id="funker"></pre>
               <pre id="aktivitet"></pre>
               <script scr="js/radbird.js"></script>
