Div. forskning på graf

--- a/index.html
+++ b/index.html
@@ -109,9 +109,9 @@
             </p>
           -->
           <div align="center">
-          <button class="btn" onclick="myChart(get_data(4))">Siste uken</button>
-          <button class="btn" onclick="myChart([4,76,90])">Siste måneden</button>
-          <button class="btn"> Siste 6 månedene</button>
+          <button class="btn" onclick="myChart([1, 2, 3])">Siste uken</button>
+          <button class="btn" onclick="myChart([3, 6, 9])">Siste måneden</button>
+          <button class="btn" onclick="myChart([6, 12, 24])"> Siste 6 månedene</button>
           <button class="btn">Siste året</button>
           </div>
           <canvas id="myChart" width="500" height="250"></canvas>
