Sentrering av overskrifter

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="magnific-popup/magnific-popup.css">
     <link rel="stylesheet" href="css/bootstrap.min.css" />
     <link rel="stylesheet" href="css/tooplate-infinite-loop.css" />
+    <link rel="stylesheet" href="css/egen_formattering.css"/>
     <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-app.js"></script>
     <script src="https://www.gstatic.com/firebasejs/7.8.0/firebase-database.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
@@ -107,11 +108,12 @@
               <pre id="aktivitet"></pre>
             </p>
           -->
-          <div align="center">
+          <!-- <div class="buttons"> -->
           <input type="submit" class="btn-uke" id="btn-uke" value="Siste uken" />
           <input type="submit" class="btn-mnd" id="btn-mnd" value="Siste måneden" />
           <input type="submit" class="btn-6mnd" id="btn-6mnd" value="Siste 6 månedene" />
           <input type="submit" class="btn-aar" id="btn-aar" value="Siste året" />
+          </div>
           </div>
           <canvas id="myChart" width="500" height="250"></canvas>
           <script src="js/radbird.js"></script>           <!--Grafen er her-->
