--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
+              <!-- <li class="nav-item">
+                <a class="nav-link tm-nav-link" href="#infinite">Hjem</a>
+              </li> -->
               <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="#infinite">Hjem</a>
+                <a class="nav-link tm-nav-link" href="#whatwedo">Hva gjør vi?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link tm-nav-link" href="#kart">Kart</a>
@@ -50,9 +53,6 @@
               </li>
               <li class="nav-item">
                 <a class="nav-link tm-nav-link" href="#noder">Noder</a>
-              </li>
-              <li class="nav-item">
-               <a class="nav-link tm-nav-link" href="#whatwedo">Hva gjør vi?</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link tm-nav-link" href="#testimonials">Brage</a>
@@ -78,11 +78,83 @@
       </div>
 
       <div class="tm-next tm-intro-next">
-        <a href="#kart" class="text-center tm-down-arrow-link">
+        <a href="#whatwedo" class="text-center tm-down-arrow-link">
           <i class="fas fa-2x fa-arrow-down tm-down-arrow"></i>
         </a>
       </div>
     </section>
+
+    <section id="whatwedo" class="tm-section-pad-top">
+      <div class="container">
+        <div class="row tm-content-box"><!-- first row -->
+          <div class="col-lg-12 col-xl-12">
+            <div class="tm-intro-text-container">
+              <h2 class="tm-text-primary mb-4 tm-section-title">Hva gjør vi?</h2>
+              <p class="mb-4 tm-intro-text">
+                Vi er en gruppe studenter som går andreåret på Elektronisk systemdesign og innnovasjon på NTNU, som har fått i oppgave av TrønderEnergi å lage en løsning for overvåkning av fugleaktiviteten i området rundt en vindmølle.
+                Løsningen skal implemnteres ved bruk av radar, der vi ønsker å bruker flere noder for å dekke et tilstreklig stort område.</p>
+          </div>
+        </div>
+      </div>
+    </section>
+            <!--</div>
+            <div class="row tm-content-box">
+        		<div class="col-lg-1">
+                    <i class="far fa-3x fa-chart-bar text-center tm-icon"></i>
+                </div>
+                <div class="col-lg-5">
+                    <div class="tm-intro-text-container">
+                        <h2 class="tm-text-primary mb-4">Statistikk</h2>
+                        <p class="mb-4 tm-intro-text">
+                          Vi leverer detaljert statistikk over fugleaktiviteten i området, merket med tidspunkt og lengde på aktivitet.</p>
+                    </div>
+                </div>
+                <div class="col-lg-1">
+                    <i class="far fa-3x fa-comment-alt text-center tm-icon"></i>
+                </div>
+                <div class="col-lg-5">
+                    <div class="tm-intro-text-container">
+                        <h2 class="tm-text-primary mb-4">Brukerstøtte</h2>
+                        <p class="mb-4 tm-intro-text">
+                          Hvis du skulle ha noen sprøsmål rundt, hva RadBird kan gjøre for deg ta å <a href="https://radbird-jizz.firebaseapp.com/#contact">kontakt oss.</a></p>
+                    </div>
+                </div>
+            </div>
+            <div class="row tm-content-box">
+        		<div class="col-lg-1">
+              <object type="image/svg+xml" data="img/tronder_energi.svg" class="logo"> -->
+                <!-- fallback image in CSS -->
+              <!-- </object>
+                </div>
+                <div class="col-lg-5">
+                  <div class="tm-intro-text-container">
+                    <h2 class="tm-text-primary mb-4">Samarbeidspartner</h2>
+                    <p class="mb-4 tm-intro-text">
+                    Vår samarbeidspartner for prosjektet er <a href="https://tronderenergi.no/">Trønder Energi</a>.
+                    Testing av produktet vil finne sted på Trønder Energi sitt test anlegg på Rye.</p>
+                    <div class="tm-continue">
+                      <a href="dokumenter/problemstiling.pdf" class="tm-intro-text tm-btn-primary">Lær mer</a>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-lg-1">
+                    <i class="fas fa-3x fa-users text-center tm-icon"></i>
+                </div>
+                <div class="col-lg-5">
+                    <div class="tm-intro-text-container">
+                      <h2 class="tm-text-primary mb-4">På lag med kunden</h2>
+                        <p class="mb-4 tm-intro-text">
+                          For å kunne levere et så komplett produkt som overhode mulig,
+                            samarbeider vi tett med kundene våre. Vårt ønske er at RadBird skal kunne levere en løsning tilpasset dine behov.
+                     </p>
+                          <div class="tm-continue">
+                            <a href="#testimonials" class="tm-intro-text tm-btn-primary">Detaljer</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section> -->
 
     <section id="kart" class="tm-section-pad-top"> <!--Her skal kartet implenteres-->
     <div class="container">
@@ -90,6 +162,10 @@
         <div class="text-center col-12">
           <h2 class="tm-text-primary tm-section-title mb-4">Kart </h2>
         </div>
+        <p class='description'>
+          Nodenes plassering er hentet fra nodens potensiometer (snart GPS), og oppdateres hver gang noden utløses av en fugl. <br>
+          Grønn og rød sirkel angir om noden er henholdsvis aktiv eller ikke.
+        </p>
       <div id="map" style="height: 500px; "></div>
       <script src="js/Kart.js"></script>       <!--Kartet er her-->
       <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBMNbqaqaKi9GeJwywQmprU-sLipKDxbTU&callback=initMap" async defer></script>
@@ -102,10 +178,13 @@
       <div class="row tm-content-box">
         <div class="col-lg-12 col-xl-12 tm-intro-text-container">
           <h2 class="tm-text-primary mb-4 tm-section-title">Data</h2>
+          <p class='description'>
+            Dataen er hentet fra databasen, som oppdateres hver gang noden registrerer aktivitet over seg.
+          </p>
+          <input type="submit" class="btn btn-day" id="btn-day" value="Siste døgnet" />
           <input type="submit" class="btn btn-uke" id="btn-uke" value="Siste uken" />
           <input type="submit" class="btn btn-mnd" id="btn-mnd" value="Siste måneden" />
           <input type="submit" class="btn btn-6mnd" id="btn-6mnd" value="Siste halvåret" />
-          <input type="submit" class="btn btn-aar" id="btn-aar" value="Siste året" />
           <div class="bord">
             <canvas id="myChart" width="500" height="200"></canvas>
             <script src="js/radbird.js"></script>           <!--Grafen er her-->
@@ -122,127 +201,28 @@
           <div class=tm-intro-text-container>
             <h2 class="tm-text-primary mb-4 tm-section-title">Noder</h2>
             <section class="node-add-and-remove">
-              <div class="add-node">
-                <h3 class="add-node-header">Legg til node:</h3>
-                <form action="" method="get" class="form-example">
-                  <div class="node-form">
-                    <label for="name">Navn på node: </label>
-                    <input type="text" name="name" id="name" placeholder="F.eks. Brage" required>
-                    <div class="add_lat">
-                      <label for="lat">Breddegrad: </label>
-                      <input type="number" step="0.0001" name="lat" id="lat" placeholder="F.eks. 63.42000">
-                    </div>
-                    <div class="add_long">
-                      <label for="long">Breddegrad: </label>
-                      <input type="number" step="0.0001" name="long" id="long" placeholder="F.eks. 10.12350">
-                    </div>
-                  </div>
-                  <div class="node-form">
-                    <input type="submit" id="legg_til_btn" value="Legg til">
-                    <script src="js/add-remove-node.js"></script>
-                  </div>
-                </form>
-              </div>
-              <div class="remove-node">
+              <section class="node-oversikt">
+                <h2 class="node-oversikt-header">Nodeoversikt</h2>
+                <p id="n-o"></p>
+                <script src="js/list_nodes.js"></script>
+              </section>
+            <div class="remove-node">
                 <h3 class="remove-node-header">Fjern node:</h3>
                 <form action="" method="get" class="form-example">
                   <div class="node-form">
                     <label for="name">Nodenummer: </label>
                     <input type="number" name="name" id="name" placeholder="F.eks. 1, 2, 3, ..." required>
                   </div>
-                  <!-- <div class="form-example">
-                    <label for="email">: </label>
-                    <input type="email" name="email" id="email" required>
-                  </div> -->
                   <div class="node-form">
                     <input type="submit" value="Fjern">
                   </div>
                 </form>
               </div>
             </section>
-            <section class="node-oversikt">
-              <h2 class="node-oversikt-header">Nodeoversikt</h2>
-              <p id="n-o"></p>
-              <script src="js/list_nodes.js"></script>
-            </section>
           </div>
         </div>
       </div>
     </div>
-
-  </section>
-      <section id="whatwedo" class="tm-section-pad-top">
-      <div class="container">
-            <div class="row tm-content-box"><!-- first row -->
-                <div class="col-lg-12 col-xl-12">
-                    <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4 tm-section-title">Hva gjør vi?</h2>
-                        <p class="mb-4 tm-intro-text">
-                          Vi er en gruppe studenter som går andreåret på Elektronisk systemdesign og innnovasjon på NTNU, som har fått i oppgave av Trønder Energi å lage en løsning for overvåkning av fugleaktiviteten i området rundt en vindmølle.
-                          Løsningen skal implemnteres ved bruk av radar, der vi ønsker å bruker flere noder for å dekke et tilstreklig stort område.</p>
-                    </div>
-                </div>
-            </div><!-- first row -->
-            <div class="row tm-content-box"><!-- second row -->
-        		<div class="col-lg-1">
-                    <i class="far fa-3x fa-chart-bar text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4">Statistikk</h2>
-                        <p class="mb-4 tm-intro-text">
-                          Vi leverer detaljert statistikk over fugleaktiviteten i området, merket med tidspunkt og lengde på aktivitet.</p>
-                    </div>
-                </div>
-
-                <div class="col-lg-1">
-                    <i class="far fa-3x fa-comment-alt text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4">Brukerstøtte</h2>
-                        <p class="mb-4 tm-intro-text">
-                          Hvis du skulle ha noen sprøsmål rundt, hva RadBird kan gjøre for deg ta å <a href="https://radbird-jizz.firebaseapp.com/#contact">kontakt oss.</a></p>
-                    </div>
-                </div>
-
-            </div><!-- second row -->
-            <div class="row tm-content-box"><!-- third row -->
-        		<div class="col-lg-1">
-              <object type="image/svg+xml" data="img/tronder_energi.svg" class="logo">
-                <!-- fallback image in CSS -->
-
-              </object>
-                </div>
-                <div class="col-lg-5">
-                  <div class="tm-intro-text-container">
-                    <h2 class="tm-text-primary mb-4">Samarbeidspartner</h2>
-                    <p class="mb-4 tm-intro-text">
-                    Vår samarbeidspartner for prosjektet er <a href="https://tronderenergi.no/">Trønder Energi</a>.
-                    Testing av produktet vil finne sted på Trønder Energi sitt test anlegg på Rye.</p>
-                    <div class="tm-continue">
-                      <a href="dokumenter/problemstiling.pdf" class="tm-intro-text tm-btn-primary">Lær mer</a>
-                    </div>
-                  </div>
-                </div>
-
-                <div class="col-lg-1">
-                    <i class="fas fa-3x fa-users text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                      <h2 class="tm-text-primary mb-4">På lag med kunden</h2>
-                        <p class="mb-4 tm-intro-text">
-                          For å kunne levere et så komplett produkt som overhode mulig,
-                            samarbeider vi tett med kundene våre. Vårt ønske er at RadBird skal kunne levere en løsning tilpasset dine behov.
-                     </p>
-                          <div class="tm-continue">
-                            <a href="#testimonials" class="tm-intro-text tm-btn-primary">Detaljer</a>
-                        </div>
-                    </div>
-                </div>
-            </div><!-- third row -->
-        </div>
     </section>
 
     <section id="testimonials" class="tm-section-pad-top tm-parallax-2">
