--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.9.3/Chart.min.js"></script>
     <script src="js/firebase_initializing.js"></script>
+    <!-- <script src="js/add-remove-node.js"></script> -->
     <link rel="icon" href="img/icon.png">
   </head>
 
@@ -91,8 +92,8 @@
             <div class="tm-intro-text-container">
               <h2 class="tm-text-primary mb-4 tm-section-title">Hva gjør vi?</h2>
               <p class="mb-4 tm-intro-text">
-                Vi er en gruppe studenter som går andreåret på Elektronisk systemdesign og innnovasjon på NTNU, som har fått i oppgave av TrønderEnergi å lage en løsning for overvåkning av fugleaktiviteten i området rundt en vindmølle.
-                Løsningen skal implemnteres ved bruk av radar, der vi ønsker å bruker flere noder for å dekke et tilstreklig stort område.</p>
+                Vi er en gruppe studenter som går andreåret på Elektronisk systemdesign og innovasjon på NTNU, som har fått i oppgave av TrønderEnergi å lage en løsning for overvåkning av fugleaktiviteten i området rundt en vindmølle.
+                Løsningen skal implementeres ved bruk av radar, der vi ønsker å bruke flere noder for å dekke et tilstrekkelig stort område.</p>
           </div>
         </div>
       </div>
@@ -207,14 +208,15 @@
                 <script src="js/list_nodes.js"></script>
               </section>
             <div class="remove-node">
-                <h3 class="remove-node-header">Fjern node:</h3>
+                <h3 class="remove-node-header">Fjern / nullstill node:</h3>
                 <form action="" method="get" class="form-example">
                   <div class="node-form">
                     <label for="name">Nodenummer: </label>
-                    <input type="number" name="name" id="name" placeholder="F.eks. 1, 2, 3, ..." required>
+                    <input type="number" name="name" id="name" required>
                   </div>
                   <div class="node-form">
-                    <input type="submit" value="Fjern">
+                    <script src="js/add-remove-node.js"></script>
+                    <input type="submit" id="btn-remove-node" value="Fjern / nullstill">
                   </div>
                 </form>
               </div>
