--- a/index.html
+++ b/index.html
@@ -201,12 +201,12 @@
           <div class=tm-intro-text-container>
             <h2 class="tm-text-primary mb-4 tm-section-title">Noder</h2>
             <section class="node-add-and-remove">
-              <section class="node-oversikt">
+              <section class="node-oversikt bord">
                 <h2 class="node-oversikt-header">Nodeoversikt</h2>
                 <p id="n-o"></p>
                 <script src="js/list_nodes.js"></script>
               </section>
-            <div class="remove-node">
+            <div class="remove-node bord">
                 <h3 class="remove-node-header">Fjern / nullstill node:</h3>
                 <form action="" method="get" class="form-example">
                   <div class="node-form">
