--- a/index.html
+++ b/index.html
@@ -39,12 +39,7 @@
           </button>
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav ml-auto">
-              <!-- <li class="nav-item">
-                <a class="nav-link tm-nav-link" href="#infinite">Hjem</a>
-              </li> -->
-              <li class="nav-item">
-                <a class="nav-link tm-nav-link" href="#whatwedo">Hva gjør vi?</a>
-              </li>
+
               <li class="nav-item">
                 <a class="nav-link tm-nav-link" href="#kart">Kart</a>
               </li>
@@ -54,12 +49,9 @@
               <li class="nav-item">
                 <a class="nav-link tm-nav-link" href="#noder">Noder</a>
               </li>
-              <!-- <li class="nav-item">
-                <a class="nav-link tm-nav-link" href="#testimonials">Brage</a>
-              </li>
               <li class="nav-item">
-                  <a class="nav-link tm-nav-link" href="#gallery">Galleri</a>
-              </li> -->
+                <a class="nav-link tm-nav-link" href="#whatwedo">Hva gjør vi?</a>
+              </li>
               <li class="nav-item">
                   <a class="nav-link tm-nav-link" href="#contact">Kontakt oss</a>
               </li>
@@ -78,83 +70,11 @@
       </div>
 
       <div class="tm-next tm-intro-next">
-        <a href="#whatwedo" class="text-center tm-down-arrow-link">
+        <a href="#kart" class="text-center tm-down-arrow-link">
           <i class="fas fa-2x fa-arrow-down tm-down-arrow"></i>
         </a>
       </div>
     </section>
-
-    <section id="whatwedo" class="tm-section-pad-top">
-      <div class="container">
-        <div class="row tm-content-box"><!-- first row -->
-          <div class="col-lg-12 col-xl-12">
-            <div class="tm-intro-text-container">
-              <h2 class="tm-text-primary mb-4 tm-section-title">Hva gjør vi?</h2>
-              <p class="mb-4 tm-intro-text">
-                Vi er en gruppe studenter som går andreåret på Elektronisk systemdesign og innnovasjon på NTNU, som har fått i oppgave av TrønderEnergi å lage en løsning for overvåkning av fugleaktiviteten i området rundt en vindmølle.
-                Løsningen skal implemnteres ved bruk av radar, der vi ønsker å bruker flere noder for å dekke et tilstreklig stort område.</p>
-          </div>
-        </div>
-      </div>
-    </section>
-            <!--</div>
-            <div class="row tm-content-box">
-        		<div class="col-lg-1">
-                    <i class="far fa-3x fa-chart-bar text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4">Statistikk</h2>
-                        <p class="mb-4 tm-intro-text">
-                          Vi leverer detaljert statistikk over fugleaktiviteten i området, merket med tidspunkt og lengde på aktivitet.</p>
-                    </div>
-                </div>
-                <div class="col-lg-1">
-                    <i class="far fa-3x fa-comment-alt text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                        <h2 class="tm-text-primary mb-4">Brukerstøtte</h2>
-                        <p class="mb-4 tm-intro-text">
-                          Hvis du skulle ha noen sprøsmål rundt, hva RadBird kan gjøre for deg ta å <a href="https://radbird-jizz.firebaseapp.com/#contact">kontakt oss.</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="row tm-content-box">
-        		<div class="col-lg-1">
-              <object type="image/svg+xml" data="img/tronder_energi.svg" class="logo"> -->
-                <!-- fallback image in CSS -->
-              <!-- </object>
-                </div>
-                <div class="col-lg-5">
-                  <div class="tm-intro-text-container">
-                    <h2 class="tm-text-primary mb-4">Samarbeidspartner</h2>
-                    <p class="mb-4 tm-intro-text">
-                    Vår samarbeidspartner for prosjektet er <a href="https://tronderenergi.no/">Trønder Energi</a>.
-                    Testing av produktet vil finne sted på Trønder Energi sitt test anlegg på Rye.</p>
-                    <div class="tm-continue">
-                      <a href="dokumenter/problemstiling.pdf" class="tm-intro-text tm-btn-primary">Lær mer</a>
-                    </div>
-                  </div>
-                </div>
-                <div class="col-lg-1">
-                    <i class="fas fa-3x fa-users text-center tm-icon"></i>
-                </div>
-                <div class="col-lg-5">
-                    <div class="tm-intro-text-container">
-                      <h2 class="tm-text-primary mb-4">På lag med kunden</h2>
-                        <p class="mb-4 tm-intro-text">
-                          For å kunne levere et så komplett produkt som overhode mulig,
-                            samarbeider vi tett med kundene våre. Vårt ønske er at RadBird skal kunne levere en løsning tilpasset dine behov.
-                     </p>
-                          <div class="tm-continue">
-                            <a href="#testimonials" class="tm-intro-text tm-btn-primary">Detaljer</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </section> -->
 
     <section id="kart" class="tm-section-pad-top"> <!--Her skal kartet implenteres-->
     <div class="container">
@@ -223,6 +143,20 @@
         </div>
       </div>
     </div>
+    </section>
+
+    <section id="whatwedo" class="tm-section-pad-top">
+      <div class="container">
+        <div class="row tm-content-box"><!-- first row -->
+          <div class="col-lg-12 col-xl-12">
+            <div class="tm-intro-text-container">
+              <h2 class="tm-text-primary mb-4 tm-section-title">Hva gjør vi?</h2>
+              <p class="mb-4 tm-intro-text">
+                Vi er en gruppe studenter som går andreåret på Elektronisk systemdesign og innnovasjon på NTNU, som har fått i oppgave av TrønderEnergi å lage en løsning for overvåkning av fugleaktiviteten i området rundt en vindmølle.
+                Løsningen skal implemnteres ved bruk av radar, der vi ønsker å bruker flere noder for å dekke et tilstreklig stort område.</p>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!-- <section id="testimonials" class="tm-section-pad-top tm-parallax-2">
