--- a/index.html
+++ b/index.html
@@ -121,18 +121,21 @@
         <div class="col-lg-12 col-xl-12">
           <div class=tm-intro-text-container>
             <h2 class="tm-text-primary mb-4 tm-section-title">Noder</h2>
+            <p class='description'>
+              Nodeoversikten viser om hver node er <span style = 'color: green'> AKTIV</span> eller <span style = 'color: red'> INAKTIV</span>. Dersom noden er <span style = 'color: red'> INAKTIV</span>, har den muligens veltet. <br>
+              Nye noder vil bli lagt til automatisk, med nodenummer gitt ved installasjon. <br>
+              Fjern en node ved å skrive inn nodenummeret. Dersom noden fortsetter å sende data senere, vil den bli nullstilt.
+            </p>
             <section class="node-add-and-remove">
               <section class="node-oversikt bord">
                 <h2 class="node-oversikt-header">Nodeoversikt</h2>
-                <p id="n-o"></p>
+                <p id = "n-o"></p>
                 <script src="js/list_nodes.js"></script>
               </section>
             <div class="remove-node bord">
                 <h3 class="remove-node-header">Fjern / nullstill node:</h3>
-                <form id="frm1" action="/action_page.php">
-                  Nodenummer: <input type="number" name="nodenr"><br>
-                  <input type="button" onclick="removeNode(nodenr)" value="Fjern / nullstill">
-                </form>
+                Nodenummer: <input type="number" name="nodeNr" id="nodeNr"><br>
+                <button onclick="removeNode(document.getElementById('nodeNr').value)">Fjern / nullstill</button>
               </div>
             </section>
           </div>
@@ -154,138 +157,6 @@
         </div>
       </div>
     </section>
-
-    <!-- <section id="testimonials" class="tm-section-pad-top tm-parallax-2">
-      <div class="container tm-testimonials-content">
-        <div class="row">
-          <div class="col-lg-12 tm-content-box">
-            <h2 class="text-white text-center mb-4 tm-section-title">Bilder av Brage</h2>
-            <p class="mx-auto tm-section-desc text-center">
-              Her er noen bilder av vår venn Brage som du kan nyte mens du venter på vår endelige nettside.
-            </p>
-            <div class="mx-auto tm-gallery-container tm-gallery-container-2">
-              <div class="tm-testimonials-carousel">
-                <figure class="tm-testimonial-item">
-                  <img src="img/brage.jpg" alt="Image" class="img-fluid mx-auto">
-                  <blockquote>This background image includes a semi-transparent overlay layer. This section also has a parallax image effect.</blockquote>
-                  <figcaption>Brage (CEO)</figcaption>
-                </figure>
-
-                <figure class="tm-testimonial-item">
-                  <img src="img/brage.jpg" alt="Image" class="img-fluid mx-auto">
-                  <blockquote>Testimonial section comes with carousel items. You can use Infinite Loop HTML CSS template for your websites.</blockquote>
-                  <figcaption>Brage (Designer)</figcaption>
-                </figure>
-
-                <figure class="tm-testimonial-item">
-                  <img src="img/brage.jpg" alt="Image" class="img-fluid mx-auto">
-                  <blockquote>Nulla finibus ligula nec tortor convallis tincidunt. Interdum et malesuada fames ac ante ipsum primis in faucibus.</blockquote>
-                  <figcaption>Brage (Web)</figcaption>
-                </figure>
-
-                <figure class="tm-testimonial-item">
-                  <img src="img/brage.jpg" alt="Image" class="img-fluid mx-auto">
-                  <blockquote>Curabitur rutrum pharetra lobortis. Pellentesque vehicula, velit quis eleifend fermentum, erat arcu aliquet neque.</blockquote>
-                  <figcaption>Brage (Radar)</figcaption>
-                </figure>
-
-                <figure class="tm-testimonial-item">
-                  <img src="img/brage.jpg" alt="Image" class="img-fluid mx-auto">
-                  <blockquote>Integer sit amet risus et erat imperdiet finibus. Nam lacus nunc, vulputate id ex eget, euismod auctor augue.</blockquote>
-                  <figcaption>Brage (CTO)</figcaption>
-                </figure>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <div class="tm-bg-overlay"></div>
-
-
-    <section id="gallery" class="tm-section-pad-top">
-      <div class="container tm-container-gallery">
-        <div class="row">
-          <div class="text-center col-12">
-              <h2 class="tm-text-primary tm-section-title mb-4" style="color: white;">Galleri</h2>
-              <p class="mx-auto tm-section-desc">
-                Se resien vår fra konsept til ferdig produkt. Her er bilder fra alle deler av utviklingsfasen.
-              </p>
-          </div>
-        </div>
-        <div class="row">
-            <div class="col-12">
-                <div class="mx-auto tm-gallery-container">
-                    <div class="grid tm-gallery">
-                      <a href="img/gallery-img-01.jpg">
-                        <figure class="effect-honey tm-gallery-item">
-                          <img src="img/gallery-tn-01.jpg" alt="Image 1" class="img-fluid">
-                          <figcaption>
-                            <h2><i>Physical Health <span>Exercise!</span></i></h2>
-                          </figcaption>
-                        </figure>
-                      </a>
-                      <a href="img/gallery-img-02.jpg">
-                        <figure class="effect-honey tm-gallery-item">
-                          <img src="img/gallery-tn-02.jpg" alt="Image 2" class="img-fluid">
-                          <figcaption>
-                            <h2><i>Rain on Glass <span>Second Image</span></i></h2>
-                          </figcaption>
-                        </figure>
-                      </a>
-                      <a href="img/gallery-img-03.jpg">
-                        <figure class="effect-honey tm-gallery-item">
-                          <img src="img/gallery-tn-03.jpg" alt="Image 3" class="img-fluid">
-                          <figcaption>
-                            <h2><i><span>Sea View</span> Mega City</i></h2>
-                          </figcaption>
-                        </figure>
-                      </a>
-                      <a href="img/gallery-img-04.jpg">
-                        <figure class="effect-honey tm-gallery-item">
-                          <img src="img/gallery-tn-04.jpg" alt="Image 4" class="img-fluid">
-                          <figcaption>
-                            <h2><i>Dream Girl <span>Thoughts</span></i></h2>
-                          </figcaption>
-                        </figure>
-                      </a>
-                      <a href="img/gallery-img-05.jpg">
-                        <figure class="effect-honey tm-gallery-item">
-                          <img src="img/gallery-tn-05.jpg" alt="Image 5" class="img-fluid">
-                          <figcaption>
-                            <h2><i><span>Workstation</span> Offices</i></h2>
-                          </figcaption>
-                        </figure>
-                      </a>
-                      <a href="img/gallery-img-06.jpg">
-                        <figure class="effect-honey tm-gallery-item">
-                          <img src="img/gallery-tn-06.jpg" alt="Image 6" class="img-fluid">
-                          <figcaption>
-                            <h2><i>Just Above <span>The City</span></i></h2>
-                          </figcaption>
-                        </figure>
-                      </a>
-                      <a href="img/gallery-img-01.jpg">
-                        <figure class="effect-honey tm-gallery-item">
-                          <img src="img/gallery-tn-01.jpg" alt="Image 7" class="img-fluid">
-                          <figcaption>
-                            <h2><i>Another <span>Exercise Time</span></i></h2>
-                          </figcaption>
-                        </figure>
-                      </a>
-                      <a href="img/gallery-img-02.jpg">
-                        <figure class="effect-honey tm-gallery-item">
-                          <img src="img/gallery-tn-02.jpg" alt="Image 8" class="img-fluid">
-                          <figcaption>
-                            <h2><i>Repeated <span>Image Spot</span></i></h2>
-                          </figcaption>
-                        </figure>
-                      </a>
-                    </div>
-                </div>
-            </div>
-          </div>
-      </div>
-    </section> -->
 
     <!-- Contact -->
     <section id="contact" class="tm-section-pad-top tm-parallax-2">
@@ -408,32 +279,10 @@
         }
       };
 
-      // var background_image_parallax_2 = function($object, multiplier){
-      //   multiplier = typeof multiplier !== 'undefined' ? multiplier : 0.5;
-      //   multiplier = 1 - multiplier;
-      //   var $doc = $(document);
-      //   $object.css({"background-attachment" : "fixed"});
-
-      //   $(window).scroll(function(){
-      //     if($(window).width() > 768) {
-      //       var firstTop = $object.offset().top,
-      //           pos = $(window).scrollTop(),
-      //           yPos = Math.round((multiplier * (firstTop - pos)) - 186);
-
-      //       var bg_css = 'center ' + yPos + 'px';
-
-      //       $object.css({"background-position" : bg_css });
-      //     } else {
-      //       $object.css({"background-position" : "center" });
-      //     }
-      //   });
-      // };
 
       $(function(){
         // Hero Section - Background Parallax
         background_image_parallax($(".tm-parallax"), 0.30, false);
-        // background_image_parallax_2($("#contact"), 0.80);
-        // background_image_parallax_2($("#testimonials"), 0.80);
 
         // Handle window resize
         window.addEventListener('resize', function(){
