Passord på fjerning i firebase
Men det fungerer bare lokalt, nettsiden oppdateres ikke med riktig kode?

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
         </div>
         <p class='description'>
           Nodenes plassering er hentet fra nodens potensiometer (snart GPS), og oppdateres hver gang noden utløses av en fugl. <br>
-          Grønn og rød sirkel angir om noden er henholdsvis aktiv eller ikke.
+          Grønn og rød sirkel angir om noden er henholdsvis <span style = 'color: green'> AKTIV</span> eller <span style = 'color: red'> INAKTIV</span>.
         </p>
       <div id="map" style="height: 500px; "></div>
       <script src="js/Kart.js"></script>       <!--Kartet er her-->
@@ -152,8 +152,8 @@
             <div class="tm-intro-text-container">
               <h2 class="tm-text-primary mb-4 tm-section-title">Hva gjør vi?</h2>
               <p class="mb-4 tm-intro-text">
-                Vi er en gruppe studenter som går andreåret på Elektronisk systemdesign og innnovasjon på NTNU, som har fått i oppgave av TrønderEnergi å lage en løsning for overvåkning av fugleaktiviteten i området rundt en vindmølle.
-                Løsningen skal implemnteres ved bruk av radar, der vi ønsker å bruker flere noder for å dekke et tilstreklig stort område. <br><br>
+                Vi er en gruppe studenter som går andreåret på Elektronisk systemdesign og innovasjon på NTNU, som har fått i oppgave av TrønderEnergi å lage en løsning for overvåkning av fugleaktiviteten i området rundt en vindmølle.
+                Løsningen skal implementeres ved bruk av radar, der vi ønsker å bruke flere noder for å dekke et tilstrekkelig stort område. <br><br>
                 Den fullstendige rapporten på prosjektet finner du <a href='https://www.youtube.com/watch?v=dQw4w9WgXcQ'>her</a>.</p>
           </div>
         </div>
