--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
                 <h3 class="remove-node-header">Fjern / nullstill node:</h3>
                 Nodenummer: <input type="number" name="nodeNr" id="nodeNr"><br>
                 Passord: <input type="password" name="notPassword" id="notPassword"><br>
-                <button onclick="removeNode(document.getElementById('nodeNr').value, document.getElementById('notPassword').value)">Fjern / nullstill</button>
+                <button class="btn" onclick="removeNode(document.getElementById('nodeNr').value, document.getElementById('notPassword').value)">Fjern / nullstill</button>
               </div>
             </section>
           </div>
